--- a/produtos.html
+++ b/produtos.html
@@ -337,7 +337,7 @@
                             <a class="card hoverable mb-4" data-toggle="modal" data-target="#basicExampleModal">
 
                             <!-- Card image -->
-                            <img class="card-img-top" src="Scarf-2-resized.jpeg" alt="Card image cap">
+                            <img class="card-img-top" src="scarf-2-resized.jpeg" alt="Card image cap">
 
                               <!-- Card content -->
                               <div class="card-body">
@@ -654,7 +654,7 @@
                             <a class="card hoverable mb-4" data-toggle="modal" data-target="#basicExampleModal">
 
                             <!-- Card image -->
-                            <img class="card-img-top" src="Scarf-2-resized.jpeg" alt="Card image cap">
+                            <img class="card-img-top" src="scarf-2-resized.jpeg" alt="Card image cap">
 
                               <!-- Card content -->
                               <div class="card-body">
