Update Colete botões

--- a/produtos.html
+++ b/produtos.html
@@ -274,7 +274,7 @@
                             <a class="card hoverable mb-4" data-toggle="modal" data-target="#basicExampleModal">
 
                             <!-- Card image -->
-                            <img class="card-img-top" src="Coletes-2-resized.jpeg" alt="Card image cap">
+                            <img class="card-img-top" src="Colete-rosa-resized.jpeg" alt="Card image cap">
 
                               <!-- Card content -->
                               <div class="card-body">
@@ -586,7 +586,7 @@
                             <a class="card hoverable mb-4" data-toggle="modal" data-target="#basicExampleModal">
 
                             <!-- Card image -->
-                            <img class="card-img-top" src="Coletes-2-resized.jpeg" alt="Card image cap">
+                            <img class="card-img-top" src="Colete-rosa-resized.jpeg.jpeg" alt="Card image cap">
 
                               <!-- Card content -->
                               <div class="card-body">
